create form for user input

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="us-eng">
   <head>
-    <title>Title</title>
+    <title>Currency Exchanger</title>
   </head>
   <body>
     <div class ="container">
-      <h1>Hello World!</h1>
+      <h1>Currency Exchanger</h1>
+      <form id="exchange">
+        <p>Please enter an amount (USD) to convert:</p>
+        <label for="usdAmount">USD:</label>
+        <input type="number" name="usdAmount" id="usrUsdIn" required>
+        <button type="submit" id="exSubmit">Exchange</button>
+      </form>
+      
     </div>
   </body>
 </html>
