add div for displaying results

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
         </select>;
         <button type="submit" id="exSubmit">Exchange</button>
       </form>
+      <div id="display">
+        <h3 id="exDisp"></h3>
+      </div>
       
     </div>
   </body>
